--- a/app/src/main/res/layout/fragment_fragment1.xml
+++ b/app/src/main/res/layout/fragment_fragment1.xml
@@ -5,12 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragment1">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <WebView
+        android:id="@+id/webView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tab 1"
-        android:textSize="50dp"
-        android:gravity="center"/>
+        android:layout_height="match_parent" />
 
 </FrameLayout>
