--- a/app/src/main/res/layout/fragment_fragment1.xml
+++ b/app/src/main/res/layout/fragment_fragment1.xml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".fragment1">
 
-    <WebView
-        android:id="@+id/webView1"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/swipeRefresh">
+
+        <WebView
+            android:id="@+id/webView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
