--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,15 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
+        android:rotation="0"
+        android:rotationX="0"
+        android:rotationY="0"
+        app:backgroundTint="@android:color/transparent"
+        app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="@+id/dictionaryViewPager"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:maxImageSize="56dp"
+        app:srcCompat="@drawable/img" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/dictionaryViewPager"
