--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,28 +21,24 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:clickable="true"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="0"
-        app:backgroundTint="@android:color/transparent"
-        app:fabSize="auto"
+        android:src="@drawable/ic_baseline_search_24"
+        app:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/dictionaryViewPager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="56dp"
-        app:srcCompat="@drawable/img" />
+        app:layout_constraintEnd_toEndOf="@+id/dictionaryViewPager"
+        app:maxImageSize="56dp" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/dictionaryViewPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout"
-        app:layout_constraintVertical_bias="1.0" >
+        app:layout_constraintVertical_bias="1.0">
 
     </androidx.viewpager.widget.ViewPager>
 
